# rust-backends-kafka

./: Cargo.toml  LICENSE  README.md  Shuttle.toml
.github/workflows/: check.yml  test.yml
consumer/: Cargo.toml
consumer/src/: main.rs
newsletter_api/: Cargo.toml  README.md
newsletter_api/scripts/: init_db.sh
newsletter_api/src/: lib.rs  main.rs  startup.rs
newsletter_api/src/routes/: subscriptions.rs
newsletter_api/tests/: health_check.rs  subscriber.rs
newsletter_api/tests/common/: mod.rs
producer-api/: Cargo.toml
producer-api/src/: main.rs
src/: main.rs
