[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
kafka = "0.10.0"
axum = "0.6.20"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
serde_json = "1.0.108"
