[package]
name = "newsletter_api"
edition = "2021"
version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter_api"


[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
hyper = "0.14.24"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
serde_json = "1.0.108"
shuttle-runtime = "0.33.0"
shuttle-axum = "0.33.0"
shuttle-shared-db = { version = "0.33.0", features = ["postgres"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid"] }

[dev-dependencies]
reqwest = { version = "0.11", features =["json"] }
